moodle.yml
apiVersion: v1
kind: Service
metadata:
  name: moodlesvc
  labels:
    app: moodle
spec:
  ports:
  - port: 80
    name: web
    targetPort: 80
  selector:
    app: moodle
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodledeploy
  labels: 
    app: moodle
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: moodle
  template:
    metadata:
      labels:
        app: moodle
    spec:
      containers:
      - name: moodlecontainer
        image: bitnami/moodle
        ports:
        - containerPort: 80
          containerPort: 443
