moodle2.yml
apiVersion: v1
kind: Service
metadata:
  name: moodlesvc2
  labels:
    app: moodle2
spec:
  ports:
  - port: 3306
    name: web2
    targetPort: 3306
  selector:
    app: moodle2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodledeploy2
  labels: 
    app: moodle2
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: moodle2
  template:
    metadata:
      labels:
        app: moodle2
    spec:
      containers:
      - name: mysqlcontainer
        image: bitnami/mariadb
        ports:
        - containerPort: 3306
      volumes:
      - name: moodle-volume
        emptyDir: {}
