ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress-test
  annotations: 
#    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sabir.moodle.com
    http:
      paths:
      - path: /nginx
        backend:
          serviceName: nginx-svc
          servicePort: 80
  - host: sabir.moodle.com
    http:
      paths:
      - path: /
        backend:
          serviceName: moodlesvc
          servicePort: 80
